--- a/registration.html
+++ b/registration.html
@@ -83,7 +83,7 @@
                     <h4>Already Have an Account?</h4>
                 </div>
                 <div class="h2-center">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" data-toggle="modal" data-target="#exampleModalCenter2" >Log In</button> 
+                    <button id="login-submit" type="button" class="btn btn-secondary" data-dismiss="modal" data-toggle="modal" data-target="#exampleModalCenter2" >Log In</button> 
                 </div>
                 <div class="modal-footer h2-center error-text" id="errorMsgReg"></div>
             </div>
