--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
         </div>
         <div>
             <ul id="navbar">
-                <li><a class="active" href="index.php">Home</a></li>
+                <li><a class="active" href="registration.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -119,6 +119,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary addproduct" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary"  id="addproduct">Add Product</button>
+                    <div class="modal-footer h2-center error-text" id="errorMsgProd"></div>
                 </div>
                 
             </div>
@@ -142,5 +143,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+
 </body>
 </html>
